fixed button centering issue on mobile using foundation class "text-center"

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -18,7 +18,7 @@ body[data-controller="home"][data-action="index"] {
       @include background-image(linear-gradient(bottom top, lighten(#8e4487, 10%), lighten(#653060, 10%)));
     }
 
-    margin-left: 75px;
+    margin-left: 20px;
 
     .fi-social-github {
       font-size: 1.8em;
